profiles/gen1/vault-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vault-ui
  namespace: vault
spec:
  hosts:
    - vault.kindtks.localhost
    - vault.kindtks.local
  gateways:
    - istio-ingress/kindtks
  http:
    - route:
        - destination:
            host: vault-ui
            port:
              number: 8200
